# JoyCtrl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: example-config.json  joyctrl.toml
src/: joyctrl.cpp  joyctrl.hpp
src/joyctrl/: configuration.cpp  configuration.hpp  foreground_window.cpp  foreground_window.hpp  joystick.cpp  joystick.hpp  joystick_handler.cpp  joystick_handler.hpp  log.cpp  log.hpp  utils.hpp
src/joyctrl/configuration/: action.hpp  action_parser.cpp  action_parser.hpp  application_configuration.cpp  application_configuration.hpp  button_combination.cpp  button_combination.hpp  button_configuration.hpp
src/joyctrl/configuration/action/: key_down.cpp  key_down.hpp
